<resources>
    <string name="app_name">EligashtTest</string>
    <string name="digital_products">محصولات دیجیتال</string>
    <string name="home_products">محصولات خانگی</string>
    <string name="product_name">نام محصول</string>
    <string name="price">قیمت</string>
    <string name="toman">تومان</string>
    <string name="numbers">عدد</string>
    <string name="description">توضیحات</string>
    <string name="product_details">جزئیات محصول</string>
    <string name="adding_product_to_buy_baskt">اضافه کردن به سبد خرید</string>
    <string name="add_to_basket">اضافه به سبد خرید</string>
    <string name="not_enough_quantity">موجودی کالا کافی نیست</string>
    <string name="title_activity_basket">BasketActivity</string>
    <string name="checkout_card">سبد خرید</string>
    <string name="successful">با موفقیت انجام گردید</string>
    <string name="not_sucessful">خرید یکی از اقلام موجود به دلیل کافی نبودن تعداد انجام نشد</string>
    <string name="quantity">موجودی</string>
    <string name="edit_done">تغییرات مورد نظر انجام شد</string>
    <string name="basket_is_empty">لیست خرید خالیست</string>
</resources>
