<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:padding="16dp"
                android:src="@drawable/back" />

            <ir.eligasht.eligashttest.views.MyTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/product_details"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/basketView"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:padding="12dp"
                android:src="@drawable/basket" />
        </LinearLayout>

        <ImageView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="4dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/green_gradiant_back"
                android:orientation="vertical">

                <ir.eligasht.eligashttest.views.MyTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="اطلاعات"
                    android:textColor="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ir.eligasht.eligashttest.views.MyTextView
                            android:id="@+id/name"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="end"
                            android:layout_weight="1"
                            android:background="@color/bg_gray_2"
                            android:padding="4dp"
                            android:text="۱۵۰۰۰ تومن"
                            android:textColor="@color/white" />

                        <ir.eligasht.eligashttest.views.MyTextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="end"
                            android:layout_weight="1"
                            android:background="@color/bg_gray_2"
                            android:gravity="center_vertical"
                            android:padding="4dp"
                            android:text="@string/product_name"
                            android:textColor="@color/white" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ir.eligasht.eligashttest.views.MyTextView
                            android:id="@+id/price"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="end"
                            android:layout_weight="1"
                            android:padding="4dp"
                            android:text="۱۵۰۰۰ تومن"
                            android:textColor="@color/white" />

                        <ir.eligasht.eligashttest.views.MyTextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="end"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:padding="4dp"
                            android:text="@string/price"
                            android:textColor="@color/white" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ir.eligasht.eligashttest.views.MyTextView
                            android:id="@+id/quantity"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="end"
                            android:layout_weight="1"
                            android:background="@color/bg_gray_2"
                            android:padding="4dp"
                            android:text="۱۵۰۰۰ تومن"
                            android:textColor="@color/white" />

                        <ir.eligasht.eligashttest.views.MyTextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="end"
                            android:layout_weight="1"
                            android:background="@color/bg_gray_2"
                            android:gravity="center_vertical"
                            android:padding="4dp"
                            android:text="@string/quantity"
                            android:textColor="@color/white" />
                    </LinearLayout>

                    <ir.eligasht.eligashttest.views.MyTextView
                        android:id="@+id/description"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:gravity="center_vertical"
                        android:padding="4dp"
                        android:text="توضیحات"
                        android:textColor="@color/white" />

                </LinearLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ir.eligasht.eligashttest.views.MyTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/adding_product_to_buy_baskt" />


                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/minus"
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="2dp"
                        android:focusable="false"
                        android:src="@drawable/minus" />

                    <ir.eligasht.eligashttest.views.MyTextView
                        android:id="@+id/productQty"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:minHeight="45dp"
                        android:padding="4dp"
                        android:text="0"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/plus"
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="2dp"
                        android:focusable="false"
                        android:src="@drawable/plus" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:background="@drawable/green_gradiant_back">

                    <ir.eligasht.eligashttest.views.MyTextView
                        android:id="@+id/basket"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="?attr/selectableItemBackground"
                        android:gravity="center"
                        android:text="@string/add_to_basket"
                        android:textColor="@color/white" />
                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>